<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".historical">


    <ScrollView
        android:id="@+id/scroll2"
        android:layout_width="409dp"
        android:layout_height="729dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/historical_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/historicaal_head"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/historical_head"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/underline"
                android:textColor="#009688"
                android:textStyle="bold" />


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="328dp"
                android:layout_below="@+id/underline"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"

                app:srcCompat="@drawable/h" />


            <TextView
                android:id="@+id/templeOfTooth_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView3"
                android:layout_centerHorizontal="true"
                android:fontFamily="cursive"
                android:text="@string/temple_of_the_tooth_head"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/templeOfTooth1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/templeOfTooth_head"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/temple_of_the_tooth_details"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/templeOfTooth2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/templeOfTooth1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/temple_of_the_tooth_details2"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/sigiriya_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/templeOfTooth2"
                android:layout_centerHorizontal="true"
                android:fontFamily="cursive"
                android:text="@string/sigiriya_head"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_below="@id/sigiriya_head"
                app:srcCompat="@drawable/s"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp" />

            <TextView
                android:id="@+id/sigiriya1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView4"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/sigiriya_details1"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="25dp"/>
            <TextView
                android:id="@+id/sigiriya2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sigiriya1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/sigiriya_details2"
                android:textColor="@color/black"
                android:textSize="17sp"
               />

            <TextView
                android:id="@+id/sigiriya3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sigiriya2"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/sigiriya_details3"
                android:textColor="@color/black"
                android:textSize="17sp"
                />




        </RelativeLayout>


    </ScrollView>
</RelativeLayout>