<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Forest">

    <ScrollView
        android:id="@+id/scroll3"
        android:layout_width="409dp"
        android:layout_height="729dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="1dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/forest_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/forest_head"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/forest_head"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:text="@string/underline"
                android:textColor="#009688"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/n"
                android:layout_below="@+id/underline"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/knuckles_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView5"
                android:layout_centerHorizontal="true"
                android:fontFamily="cursive"
                android:text="@string/knuckles_head"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/knuckles1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/knuckles_head"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/knuckles_details"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="20dp"/>


            <TextView
                android:id="@+id/sinharaja_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/knuckles1"
                android:layout_centerHorizontal="true"
                android:fontFamily="cursive"
                android:text="@string/sinharaja_head"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                android:layout_marginTop="30dp"/>

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/sin"
                android:layout_height="280dp"
                android:layout_below="@id/sinharaja_head"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                />

            <TextView
                android:id="@+id/sinharaja1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView6"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/sinharaja_details"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginTop="20dp"/>



        </RelativeLayout>

    </ScrollView>
</RelativeLayout>