<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFAFA"
    tools:context=".BeachPage">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:background="#F5F6F6"
                android:fontFamily="serif-monospace"
                android:gravity="center"
                android:text="@string/beach_page_header"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/underline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_marginTop="46dp"
                android:fontFamily="sans-serif"
                android:layout_centerHorizontal="true"
                android:text="@string/underline"
                android:textColor="#009688"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/beachImage"
                android:layout_width="400dp"
                android:layout_height="338dp"
                android:layout_below="@+id/underline"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="6dp"
                app:srcCompat="@drawable/abc" />

            <TextView
                android:id="@+id/nilaveliHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/beachImage"
                android:layout_alignParentStart="true"
                android:layout_marginStart="168dp"
                android:fontFamily="cursive"
                android:gravity="center_horizontal"
                android:text="@string/nilaveli_name"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nilaveli1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nilaveliHead"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/nilaveli_Details"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text=""
                />

            <TextView
                android:id="@+id/nilaveli2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nilaveli1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/akaya_telivigala"
                android:text="@string/nilaveli_Details"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/kalkudahHead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nilaveli2"
                android:layout_alignBottom="@+id/nilaveli2"
                android:layout_alignParentStart="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="-100dp"
                android:fontFamily="cursive"
                android:text="@string/kalkudah_name"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:layout_below="@+id/kalkudahHead"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
               android:layout_marginTop="60dp"
                app:srcCompat="@drawable/a" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kalkudah_details"
                android:layout_below="@+id/imageView2"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:fontFamily="@font/akaya_telivigala"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"


                />


        </RelativeLayout>

    </ScrollView>
</RelativeLayout>